[package]
name = "tiny"
version = "0.4.5"
authors = ["Ömer Sinan Ağacan <omeragacan@gmail.com>"]
repository = "https://github.com/osa1/tiny"
readme = "README.md"
license = "MIT"
keywords = ["irc"]
categories = ["network-programming"]
description = "An IRC client"
edition = "2018"

[badges]
travis-ci = { repository = "osa1/tiny" }

[[bin]]
name = "tiny"
path = "src/main.rs"

[dependencies]
base64 = "0.6.0"
dirs = "1.0.2"
futures-util-preview = "0.3.0-alpha.18"
libtiny = { path = "libtiny" }
libtiny_tui = { path = "libtiny_tui" }
serde = { version = "1.0.8", features = ["derive"] }
serde_yaml = "0.7.1"
term_input = { path = "term_input" }
time = "0.1"
tokio = { git = "https://github.com/tokio-rs/tokio.git", features = ["timer"] }
tokio-executor = { git = "https://github.com/tokio-rs/tokio.git" }

[profile.release]
lto = true
