[workspace]
members = [
    "crates/libtiny_client",
    "crates/libtiny_common",
    "crates/libtiny_logger",
    "crates/libtiny_tui",
    "crates/libtiny_wire",
    "crates/term_input",
    "crates/term_input_macros",
    "crates/termbox",
    "crates/tiny",
]

[profile.release]
lto = true
codegen-units = 1
