[package]
name = "libtiny"
version = "0.4.5"
authors = ["Ömer Sinan Ağacan <omeragacan@gmail.com>"]
repository = "https://github.com/osa1/tiny"
readme = "README.md"
license = "MIT"
keywords = ["irc"]
categories = ["network-programming"]
description = "An IRC client"
edition = "2018"

[badges]
travis-ci = { repository = "osa1/tiny" }

[lib]
name = "tiny"
path = "src/lib.rs"

[dependencies]
base64 = "0.6.0"
dirs = "1.0.2"
futures-preview = { version = "0.3.0-alpha.18",  features = ["async-await", "nightly"] }
libc = "0.2"
mio = "0.6"
native-tls = "0.2.2"
net2 = "0.2.23"
notify-rust = "3"
serde = { version = "1.0.8", features = ["derive"] }
serde_yaml = "0.7.1"
take_mut = "0.2.0"
tempfile = "3.0.3"
term_input = { path = "../term_input", version = "0.1.5" }
termbox_simple = { path = "../termbox", version = "0.2.3" }
time = "0.1"
tokio = { version = "0.2.0-alpha.2", features = ["timer"] }
tokio-net = "0.2.0-alpha.2"
tokio-sync = "0.2.0-alpha.2"
tokio-timer = "0.2.0-alpha.2"
tokio-executor = "0.2.0-alpha.2"
futures-util-preview = "=0.3.0-alpha.18"

[profile.release]
lto = true
