[package]
name = "libtiny"
version = "0.4.5"
authors = ["Ömer Sinan Ağacan <omeragacan@gmail.com>"]
repository = "https://github.com/osa1/tiny"
readme = "README.md"
license = "MIT"
keywords = ["irc"]
categories = ["network-programming"]
description = "An IRC client"
edition = "2018"

[badges]
travis-ci = { repository = "osa1/tiny" }

[lib]
name = "libtiny"
path = "src/lib.rs"

[dependencies]
futures-preview = { version = "0.3.0-alpha.18",  features = ["async-await", "nightly"] }
futures-util-preview = "0.3.0-alpha.18"
tokio = { version = "0.2.0-alpha.2", features = ["timer"] }
tokio-executor = "0.2.0-alpha.2"

[dev-dependencies]
quickcheck = "0.3"

[profile.release]
lto = true
