[package]
name = "libtiny"
version = "0.4.5"
authors = ["Ömer Sinan Ağacan <omeragacan@gmail.com>"]
repository = "https://github.com/osa1/tiny"
readme = "README.md"
license = "MIT"
keywords = ["irc"]
categories = ["network-programming"]
description = "An IRC client"
edition = "2018"

[badges]
travis-ci = { repository = "osa1/tiny" }

[lib]
name = "libtiny"
path = "src/lib.rs"

[dependencies]
base64 = "0.6.0"
futures-preview = { version = "0.3.0-alpha.18",  features = ["async-await", "nightly"] }
futures-util-preview = "0.3.0-alpha.18"
libtiny_logger = { path = "../libtiny_logger" }
libtiny_wire = { path = "../libtiny_wire" }
native-tls = "0.2"
tokio = { git = "https://github.com/tokio-rs/tokio.git", features = ["timer"] }
tokio-executor = { git = "https://github.com/tokio-rs/tokio.git" }
tokio-tls = { git = "https://github.com/tokio-rs/tokio.git" }
