[package]
name = "libtiny_client"
version = "0.1.0"
authors = ["Ömer Sinan Ağacan <omeragacan@gmail.com>"]
description = "An IRC client library, mainly to be used in tiny"
edition = "2018"

[dependencies]
base64 = "0.6.0"
env_logger = "0.7"
futures = "0.3.1"
libtiny_logger = { path = "../libtiny_logger" }
libtiny_wire = { path = "../libtiny_wire" }
log = "0.4"
native-tls = "0.2"
tokio = { version = "0.2.7", features = ["full"] }
tokio-tls = "0.3.0"
