[package]
name = "libtiny_client"
version = "0.1.0"
authors = ["Ömer Sinan Ağacan <omeragacan@gmail.com>"]
description = "An IRC client library, mainly to be used in tiny"
edition = "2018"

[features]
default = ["tls-rustls"]
tls-native = ["native-tls", "tokio-tls"]
tls-rustls = ["rustls-native-certs", "tokio-rustls"]

[dependencies]
base64 = "0.6.0"
futures = { version = "0.3.1", default-features = false, features = ["std", "async-await"] }
lazy_static = "1.4.0"
libtiny_logger = { path = "../libtiny_logger" }
libtiny_wire = { path = "../libtiny_wire" }
log = "0.4"
native-tls = { version = "0.2", optional = true }
rustls-native-certs = { version = "0.4", optional = true }
tokio = { version = "0.2.11", default-features = false, features = ["io-util", "io-driver", "signal", "sync", "stream", "rt-core", "time", "tcp", "rt-util", "blocking", "macros"] }
tokio-rustls = { version = "0.14", optional = true }
tokio-tls = { version = "0.3", optional = true }
