[package]
name = "libtiny_gui"
version = "0.1.5"
authors = ["Ömer Sinan Ağacan <omeragacan@gmail.com>"]
description = "GUI implementation for tiny"
edition = "2018"

[dependencies]
gdk = "0.11"
gio = "0.7"
glib = "0.8"
gtk = { version = "0.7", features = ["v3_22_30"] }
libtiny_ui = { path = "../libtiny_ui" }
tokio = { git = "https://github.com/tokio-rs/tokio.git" }

[dev-dependencies]
futures-util-preview = "0.3.0-alpha.19"
