[package]
name = "libtiny_tui"
version = "0.1.0"
description = "A terminal UI for tiny"
edition = "2018"

[dependencies]
env_logger = "0.7"
futures-util-preview = "0.3.0-alpha.19"
libtiny_ui = { path = "../libtiny_ui" }
log = "0.4"
notify-rust = "3"
serde = { version = "1.0.8", features = ["derive"] }
tempfile = "3.0.3"
term_input = { path = "../term_input" }
termbox_simple = { path = "../termbox" }
time = "0.1"
tokio = { git = "https://github.com/tokio-rs/tokio.git", features = ["timer"] }
tokio-net = { git = "https://github.com/tokio-rs/tokio.git", features = ["signal"] }

[dev-dependencies]
mio = "0.6.9"
libc = "0.2.22"
