[package]
name = "term_input_futures"
version = "0.1.5"
authors = ["Ömer Sinan Ağacan <omeragacan@gmail.com>"]
description = "Input handling for xterm-compatible terminals"
repository = "https://github.com/osa1/tiny"
license = "MIT"
edition = "2018"

[dependencies]
futures = "0.1"
libc = "0.2"
mio = "0.6"
nix = "0.7"
tokio = "0.1"

[dev-dependencies]
mio = "0.6.9"
