[package]
name = "termbox_simple"
version = "0.2.3"
authors = ["Ömer Sinan Ağacan <omeragacan@gmail.com>"]
description = "A hacked version of termbox (see README)"
repository = "https://github.com/osa1/tiny"
license = "MIT"
edition = "2018"

[dependencies]
libc = "0.2"
termion = "1.5"
unicode-width = "0.1"

[dev-dependencies]
mio = "0.6.9"
term_input = "0.1.5"
