[package]
name = "tiny"
version = "0.5.1"
authors = ["Ömer Sinan Ağacan <omeragacan@gmail.com>"]
repository = "https://github.com/osa1/tiny"
readme = "README.md"
license = "MIT"
description = "An IRC client"
edition = "2018"

[features]
default = ["tls-rustls"]
tls-native = ["libtiny_client/tls-native"]
tls-rustls = ["libtiny_client/tls-rustls"]
desktop-notifications = ["libtiny_tui/desktop-notifications"]

[dependencies]
clap = "2.33"
dirs = "1.0.2"
env_logger = "0.7"
futures = "0.3.1"
libtiny_client = { path = "../libtiny_client", default-features = false }
libtiny_logger = { path = "../libtiny_logger" }
libtiny_tui = { path = "../libtiny_tui", default-features = false }
libtiny_ui = { path = "../libtiny_ui" }
libtiny_wire = { path = "../libtiny_wire" }
log = "0.4"
serde = { version = "1.0.8", features = ["derive"] }
serde_yaml = "0.7.1"
time = "0.1"
tokio = { version = "0.2.11", features = ["full"] }

[build-dependencies]
rustc_tools_util = "0.2.0"
