[package]
name = "term_input"
version = "0.2.0"
authors = ["Ömer Sinan Ağacan <omeragacan@gmail.com>"]
description = "Input handling for xterm-compatible terminals"
repository = "https://github.com/osa1/tiny"
license = "MIT"
edition = "2024"

[dependencies]
libc = "0.2"
log = "0.4"
mio = "1.0"
nix = { version = "0.27", features = ["fs"] }
term_input_macros = { path = "../term_input_macros" }
tokio = { version = "1.17", default-features = false, features = ["net", "rt"] }
tokio-stream = "0.1"
