[package]
name = "tiny"
version = "0.9.0"
authors = ["Ömer Sinan Ağacan <omeragacan@gmail.com>"]
repository = "https://github.com/osa1/tiny"
readme = "README.md"
license = "MIT"
description = "An IRC client"
edition = "2018"

[features]
default = ["tls-rustls"]
tls-native = ["libtiny_client/tls-native"]
tls-rustls = ["libtiny_client/tls-rustls"]
desktop-notifications = ["libtiny_tui/desktop-notifications"]

[dependencies]
clap = "2.33"
dirs = "3.0"
env_logger = { version = "0.8", default-features = false }
libtiny_client = { path = "../libtiny_client", default-features = false }
libtiny_common = { path = "../libtiny_common" }
libtiny_logger = { path = "../libtiny_logger" }
libtiny_tui = { path = "../libtiny_tui", default-features = false }
libtiny_wire = { path = "../libtiny_wire" }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
time = "0.1"
tokio = { version = "1.6.1", default-features = false, features = [] }
tokio-stream = { version = "0.1.6", features = [] }

[dev-dependencies]
term_input = { path = "../term_input" }
termbox_simple = { path = "../termbox" }

[build-dependencies]
rustc_tools_util = "0.2"
